# unfault

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  opencode.json
analysis/: Cargo.toml
analysis/src/: config.rs  engine.rs  error.rs  ir.rs  lib.rs  parse.rs  session.rs  types.rs
analysis/src/dependencies/: extractor.rs  mod.rs  url_parser.rs
analysis/src/graph/: mod.rs  traversal.rs
analysis/src/parse/: ast.rs  go.rs  mod.rs  rust.rs  typescript.rs
analysis/src/profiles/: builtin.rs  mod.rs
analysis/src/rules/: applicability_defaults.rs  finding.rs  metadata.rs  mod.rs  registry.rs
analysis/src/rules/go/: bare_recover.rs  channel_never_closed.rs  circuit_breaker.rs  concurrent_map_access.rs  context_background.rs  cpu_in_hot_path.rs  defer_in_loop.rs  empty_critical_section.rs  ephemeral_filesystem_write.rs  error_type_assertion.rs  global_mutable_state.rs  goroutine_leak.rs  graceful_shutdown.rs  halstead_complexity.rs  hardcoded_secrets.rs  http_retry.rs  http_timeout.rs  idempotency_key.rs  large_response_memory.rs  map_without_size_hint.rs  missing_correlation_id.rs  missing_structured_logging.rs  missing_tracing.rs  mod.rs  panic_in_library.rs  race_condition.rs  rate_limiting.rs  reflect_in_hot_path.rs  regex_compile.rs  sentinel_error_comparison.rs  slice_append_in_loop.rs  slice_memory_leak.rs  sql_injection.rs  sync_dns_lookup.rs  transaction_boundary.rs  type_assertion_no_ok.rs  unbounded_cache.rs  unbounded_goroutines.rs  unbounded_memory.rs  unbounded_retry.rs  (+4 more)
analysis/src/rules/python/: async_task_no_error_handling.rs  asyncio_timeout.rs  bare_except.rs  circuit_breaker.rs  code_duplication.rs  cpu_in_event_loop.rs  db_timeout.rs  ephemeral_filesystem_write.rs  global_mutable_state.rs  graceful_shutdown.rs  grpc_no_deadline.rs  halstead_complexity.rs  idempotency_key.rs  io_in_hot_path.rs  large_response_memory.rs  missing_correlation_id.rs  missing_structured_logging.rs  missing_tracing.rs  mod.rs  n_plus_one_queries.rs  naive_datetime.rs  race_condition.rs  recursive_no_base_case.rs  regex_compile.rs  sql_injection.rs  sync_dns_lookup.rs  transaction_boundary.rs  unbounded_cache.rs  unbounded_concurrency.rs  unbounded_memory.rs  unbounded_retry.rs  uncancelled_tasks.rs  unsafe_eval.rs
analysis/src/rules/rust/: arc_mutex_contention.rs  blocking_in_async.rs  circuit_breaker.rs  clone_in_loop.rs  cpu_in_async.rs  ephemeral_filesystem_write.rs  global_mutable_state.rs  grpc_no_deadline.rs  halstead_complexity.rs  hardcoded_secrets.rs  idempotency_key.rs  ignored_result.rs  io_in_hot_path.rs  large_response_memory.rs  missing_async_timeout.rs  missing_correlation_id.rs  missing_select_timeout.rs  missing_structured_logging.rs  missing_tracing.rs  mod.rs  n_plus_one.rs  naive_datetime.rs  panic_in_library.rs  println_in_lib.rs  regex_compile.rs  spawn_no_error_handling.rs  sql_injection.rs  sync_dns_lookup.rs  unbounded_cache.rs  unbounded_channel.rs  unbounded_concurrency.rs  unbounded_memory.rs  unbounded_recursion.rs  unbounded_retry.rs  uncancelled_tasks.rs  unsafe_block_unaudited.rs  unsafe_unwrap.rs
analysis/src/rules/templates/: http_timeout.rs  mod.rs  retry.rs  structured_logging.rs
analysis/src/rules/typescript/: async_without_error_handling.rs  bare_catch.rs  circuit_breaker.rs  console_in_production.rs  cpu_in_event_loop.rs  empty_catch.rs  global_mutable_state.rs  graceful_shutdown.rs  grpc_no_deadline.rs  halstead_complexity.rs  hardcoded_secrets.rs  http_missing_timeout.rs  http_retry.rs  idempotency_key.rs  large_response_memory.rs  missing_correlation_id.rs  missing_null_check.rs  missing_structured_logging.rs  missing_tracing.rs  mod.rs  n_plus_one_queries.rs  naive_datetime.rs  promise_no_catch.rs  race_condition.rs  rate_limiting.rs  regex_compile.rs  sql_injection.rs  sync_dns_lookup.rs  transaction_boundary.rs  unbounded_cache.rs  unbounded_concurrency.rs  unbounded_memory.rs  unbounded_retry.rs  unsafe_any.rs  unsafe_eval.rs
analysis/src/semantics/: common_impl.rs  mod.rs
analysis/src/semantics/common/: async_ops.rs  calls.rs  db.rs  frameworks.rs  functions.rs  http.rs  imports.rs  mod.rs
analysis/src/semantics/go/: frameworks.rs  http.rs  mod.rs  model.rs
analysis/src/semantics/python/: fastapi.rs  http.rs  mod.rs  model.rs  orm.rs
analysis/src/semantics/rust/: frameworks.rs  mod.rs  model.rs
analysis/src/sre/: glossary.rs  mod.rs  ranker.rs  synthesizer.rs  world_model.rs
analysis/src/suppression/: filter.rs  mod.rs  model.rs  parser.rs
analysis/src/types/: context.rs  dependency.rs  finding.rs  meta.rs  mod.rs  patch.rs  profile.rs
cli/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
cli/.github/workflows/: ci.yml  release.yml
cli/src/: analysis.rs  config.rs  enrichment_cache.rs  errors.rs  exit_codes.rs  fmt.rs  lib.rs  llm.rs  local_graph.rs  main.rs  output.rs
cli/src/api/: auth.rs  client.rs  graph.rs  llm.rs  mod.rs  rag.rs  session.rs
cli/src/commands/: agent_skills.rs  ask.rs  config.rs  fault.rs  graph.rs  info.rs  integrations.rs  lint.rs  login.rs  lsp.rs  mod.rs  review.rs  status.rs  telemetry.rs
cli/src/integration/: mod.rs
cli/src/integration/gcp/: mod.rs  (+2 more)
cli/src/session/: file_collector.rs  graph_builder.rs  header_extractor.rs  ir_builder.rs  mod.rs  patch_applier.rs  query_cache.rs  runner.rs  semantics_cache.rs  workspace.rs  workspace_id.rs  workspace_settings.rs
cli/src/slo/: matcher.rs  mod.rs  types.rs
cli/src/trace/: enricher.rs  mod.rs
core/: .gitignore  Cargo.toml  README.md
core/.github/workflows/: ci.yml  release.yml
core/src/: lib.rs
core/src/graph/: mod.rs  traversal.rs
core/src/parse/: ast.rs  go.rs  mod.rs  python.rs  rust.rs  typescript.rs
core/src/semantics/: common_impl.rs  mod.rs
core/src/types/: dependency.rs  finding.rs  graph_query.rs  meta.rs  mod.rs  patch.rs  session_result.rs  sre_diagnostic.rs  workspace.rs
rag/: Cargo.toml
rag/src/: error.rs  lib.rs  query.rs  store.rs  types.rs
rag/src/embeddings/: content.rs  mod.rs  provider.rs
rag/src/retrieval/: graph_queries.rs  mod.rs
rag/src/routing/: mod.rs  signals.rs
(+104 files in other folders)
