[workspace]
members = ["core", "analysis", "cli"]
resolver = "2"

[workspace.package]
authors = ["Sylvain Hellegouarch <sylvain@unfault.dev>"]
edition = "2024"
license = "MIT"
repository = "https://github.com/unfault/unfault"
homepage = "https://unfault.dev"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "io-std"] }
async-trait = "0.1"

# Error handling
anyhow = "1.0"
thiserror = "2"

# Parsing
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-go = "0.25"
tree-sitter-java = "0.23"
tree-sitter-yaml = "0.7.2"
tree-sitter-hcl = "1.1"
tree-sitter-json = "0.24"

# Graph
petgraph = { version = "0.8", features = ["serde-1"] }

# Utilities
regex = "1"
rayon = "1"
