[package]
name = "unfault-analysis"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rule evaluation and analysis engine for unfault"
keywords = ["code-analysis", "rules", "linting"]
categories = ["development-tools"]

[lib]
name = "unfault_analysis"
path = "src/lib.rs"

[dependencies]
unfault-core = { path = "../core" }

# From workspace
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
rayon.workspace = true
regex.workspace = true
petgraph.workspace = true

# Tree-sitter (needed for parse module)
tree-sitter.workspace = true
tree-sitter-python.workspace = true
tree-sitter-rust.workspace = true
tree-sitter-javascript.workspace = true
tree-sitter-typescript.workspace = true
tree-sitter-go.workspace = true
tree-sitter-java.workspace = true
tree-sitter-yaml.workspace = true
tree-sitter-hcl.workspace = true
tree-sitter-json.workspace = true

# Diff generation
similar = { version = "2", features = ["inline", "text"] }

# Analysis-specific
arc-swap = "1"
scc = "3"
memchr = { version = "2", default-features = false }

[dev-dependencies]
