[package]
name = "unfault-rag"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RAG (Retrieval-Augmented Generation) engine for unfault"
keywords = ["rag", "embeddings", "vector-search", "lancedb"]
categories = ["development-tools"]

[lib]
name = "unfault_rag"
path = "src/lib.rs"

[dependencies]
unfault-analysis = { path = "../analysis" }

# From workspace
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# RAG-specific (to be added later)
# lancedb = "0.x"
# reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
