[package]
name = "unfault-rag"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "RAG (Retrieval-Augmented Generation) engine for unfault"
keywords = ["rag", "embeddings", "vector-search", "lancedb"]
categories = ["development-tools"]

[lib]
name = "unfault_rag"
path = "src/lib.rs"

[dependencies]
unfault-analysis = { path = "../analysis" }

# From workspace
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
async-trait.workspace = true
anyhow.workspace = true
thiserror.workspace = true
regex.workspace = true

# Vector storage
lancedb = "0.26"
arrow-array = "57"
arrow-schema = "57"
arrow = "57"

# HTTP client for embedding APIs
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Utilities
futures = "0.3"
sha2 = "0.10"
hex = "0.4"
log = "0.4"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tempfile = "3"
